# homecentral

backend/: Cargo.toml  build.rs
backend/proto/: Bus.proto  a_bus.proto  bus_min.proto
backend/src/: PathTree.rs  main.rs  path_tree.rs
backend/src/data_lake/: mod.rs  path_tree.rs
docs/: homecentral_frontend.js  index.html
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs
ghpages/: index.html
