[package]
name = "homecentral_backend"
version = "0.1.0"
authors = ["Rainer Schoenberger <rainer-homecentral@wwad.de>"]
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "signal"] }
by_address = {version = "1"}
tonic = "0.8"
prost = "0.11"
regex = "1"
tokio-stream = { version = "0.1"}
#futures = "0.3"
#futures = { version = "0.3", default-features = false}

[build-dependencies]
tonic-build = "0.8"
